--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,8 +19,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cloud_firestore: ^0.13.4+2
 
-  # The following adds the Cupertino Icons font to your application.
+#   The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   provider: ^4.0.4
